# MemoryOS

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  conversations.py  mcp.py  mcp_sse.py  memory.py
backend/app/core/: cache.py  config.py  db.py  logging.py  metrics.py  security.py
backend/app/models/: domain.py  persistence.py
backend/app/schemas/: auth.py  conversation.py  ingestion.py  memory.py
backend/app/services/: auth.py  conversations.py  document_ingestion.py  embeddings.py  jobs.py  mcp.py  memory.py  providers.py
backend/app/workers/: run.py
backend/migrations/: 001_init.sql  002_memories_embedding_vector.sql  003_auth_and_jobs_hardening.sql  004_rbac_orgs_apps.sql  005_mcp_conversation_foundation.sql  006_agent_scope_fix.sql  007_backfill_persistent_ingestion_scope.sql  008_document_sources_and_chunk_identity.sql
backend/tests/: test_conversation_service.py  test_memory_flow.py  test_retrieval_strategy.py
docs/: architecture.md  competitive-positioning-vs-cognee.md  dashboard-roadmap.md  enterprise-knowledge-graph-roadmap.md  lightrag-cognee-docling-integration.md  runbook.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DocsPanel.tsx  (+8 more)
ops/prometheus/: alerts.yml  prometheus.yml
scripts/: backup-db.sh  restore-db.sh
(+6 files in other folders)
